# twm

./: .gitignore  README.md  justfile  pyproject.toml  q
nbs/: 01_scratch.ipynb  02_craftax_state2px.ipynb  03_vector_env.ipynb  04_obs.ipynb  05_buffer.ipynb  05_load_saved.ipynb
scripts/: main.py
twm/: actor_critic.py  agent.py  config.py  custom_types.py  main.py  metrics.py  nets.py  play.py  replay_buffer.py  trainer.py  utils.py  world_model.py
twm/envs/: atari.py  craftax.py  gymnax2gymnasium.py
